[metadata]
name = spiritvision
version = attr: spiritvision.__version__
description = Image classification of spirit drops with PyTorch and FastAI
long_description = file: README.md
keywords = spirits, ai, image classification
platforms = unix, linux, osx, cygwin, win32
# license = Should add
classifiers =
    Framework :: pytorch
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
packages = find:
install_requires =
    opencv-python>4.6
    fastai>2.7
    importlib-metadata; python_version<"3.8"
package_dir =
    =src
