[metadata]
name = spiritvision
version = attr: spiritvision.__version__
description = Image classification of spirit drops with PyTorch and FastAI
long_description = file: README.md
keywords = spirits, ai, image classification
platforms = unix, linux, osx, cygwin, win32
# license = TODO: decide on license
classifiers =
    Framework :: pytorch
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = spiritvision
install_requires =
                  fastbook>0.0
                  torch>=1.12.1,<2
                  fastai>=2.7,<3
                  scikit-learn>=1.0.2,<2
                  fastbook>0.0
                  ipywidgets>8,<9
                  opencv-python>=4.6,<5
python_requires = >=3.7
package_dir =
           =src
zip_safe = no

[options.entry_points]
console_scripts =
    train=spiritvision.train:main

[options.package_data]
spiritvision = py.typed

[flake8]
max-line-length = 160